# QUANTAXIS

./: .mcp.json  LEGACY_FACTOR_GUIDE.zh-CN.md  PROJECT_GUIDE.zh-CN.md  README.md  config.easytrader.yaml  config.okx.yaml  config.paper.yaml  pyproject.toml
QUANTAXIS/: __init__.py  __main__.py  _logging.py
QUANTAXIS/QAData/: QAFeatureStruct.py
QUANTAXIS/QAExchange/: __init__.py  okx_client.py  okx_trader.py
QUANTAXIS/QAStrategy/: __init__.py  plot.py  qactabase.py  qamultibase.py
QUANTAXIS/QIFI/: QifiAccount.py
QUANTAXIS/ashare/: __init__.py  account.py  broker.py  cli.py  quotes.py  runner.py
QUANTAXIS/backtest/: __init__.py  data.py  engine.py  features.py  market_rules.py  plot.py  portfolio.py  research.py  risk.py  strategy.py
examples/: legacy_cta_sqlite_demo.py  legacy_factor_demo.py  legacy_multisymbol_sqlite_demo.py  okx_live_trading.py
mcp_servers/: longbridge_mcp.py  okx_market_mcp.py
tests/: test_account.py  test_engine.py  test_market_rules.py  test_market_rules_extended.py  test_portfolio.py  test_research.py  test_risk.py  test_risk_extended.py
