[project]
name = "quantaxis"
version = "3.0.0"
description = "Minimal QUANTAXIS build for China A-share trading"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "pytdx>=1.72",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
live = [
  "easytrader>=0.23.7",
]
research = [
  "akshare>=1.17",
  "matplotlib>=3.9",
]
legacy = [
  "apscheduler>=3.10,<4.0",
  "async-timeout>=4.0.3",
  "attrs>=23.0,<24.0",
  "baostock>=0.8.8",
  "flask>=3.0,<4.0",
  "gevent-websocket>=0.10.1",
  "janus>=1.0.0",
  "motor>=3.7.0,<4.0.0",
  "numba>=0.59.0",
  "pika>=1.3.2,<2.0.0",
  "protobuf>=4.25.0,<6.0.0",
  "pyecharts>=2.0.0",
  "pymongo>=4.10.0,<5.0.0",
  "redis>=5.2.0,<6.0.0",
  "retrying>=1.3.4",
  "seaborn>=0.13.0,<0.14.0",
  "tables>=3.10.0",
  "tornado>=6.4.0,<7.0.0",
  "tushare>=1.4.0",
  "websocket-client>=1.8.0,<2.0.0",
  "zenlog>=1.1",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.11",
]

[project.scripts]
quantaxis-a = "QUANTAXIS.ashare.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["QUANTAXIS"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -q --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "W",
  "UP",
  "B",
  "C4",
  "SIM",
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pytdx.*", "akshare.*", "easytrader.*", "matplotlib.*"]
ignore_missing_imports = true
